[tool.poetry]
name = "aichains"
version = "0.1.0"
description = ""
authors = ["limoiie <limo.iie4@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
arxiv = "^1.4.7"
blessed = "^1.20.0"
fire = "^0.5.0"
langchain = "^0.0.157"
openai = "^0.27.6"
wikipedia = "^1.4.0"
python-dotenv = "^1.0.0"
ipython = "^8.13.1"
google-search-results = "^2.4.2"
rich = "^13.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
